<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alog</string>
    <string name="logger">Logger</string>
    <string name="autosave">Auto Saving</string>
    <string name="developer">Developer options</string>
    <string name="netDebug">Net Debugging</string>
    <string name="level">Level?</string>
    <string name="format">Format?</string>
    <string name="buffer">Buffer?</string>
    
    <string name="autosave_summary">Automatically save the log to a file.</string>
    <string name="level_summary">Log level used to display log entries.</string>
    <string name="format_summary">Log format to use when displaying log entries.</string>
    <string name="buffer_summary">Log buffer to display.</string>
    <string name="about_summary">Author: yuanhotel</string>
    
    <string name="fatal_title">Fatal</string>
    <string name="error_title">Error</string>
    <string name="warn_title">Warning</string>
    <string name="info_title">Information</string>
    <string name="verbose_title">Verbose</string>
    <string name="debug_title">Debug</string>
    <string name="main_title">Main</string>
    <string name="events_title">Events</string>
    <string name="radio_title">Radio</string>
    <string name="brief_title">Brief</string>
    <string name="process_title">Process</string>
    <string name="tag_title">Tag</string>
    <string name="thread_title">Thread</string>
    <string name="raw_title">Raw</string>
    <string name="time_title">Time</string>
    <string name="long_title">Long</string>
    <string name="threadtime_title">Thread Time</string>
    <string name="about">About</string>
    <string name="about_title">About Title</string>
    <string name="about_message">This program is convenient for for anroid developers to provide!\n1, select the option of Auto saving, the log is saved to the memory card\n2, select the  option of net debugging, execute commands on the computer (ADB connect IP), will be connected to the Android device\n Author: yuanhotel</string>

</resources>