<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/logger" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="autosave"
            android:summary="@string/autosave_summary"
            android:title="@string/autosave" />

        <ListPreference
            android:defaultValue="V"
            android:entries="@array/level_entries"
            android:entryValues="@array/level_values"
            android:key="level"
            android:summary="@string/level_summary"
            android:title="@string/level" />

        <ListPreference
            android:defaultValue="BRIEF"
            android:entries="@array/format_entries"
            android:entryValues="@array/format_values"
            android:key="format"
            android:summary="@string/format_summary"
            android:title="@string/format" />

        <ListPreference
            android:defaultValue="MAIN"
            android:entries="@array/buffer_entries"
            android:entryValues="@array/buffer_values"
            android:key="buffer"
            android:summary="@string/buffer_summary"
            android:title="@string/buffer" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/developer" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="netdebug"
            android:title="@string/netDebug" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about" >

        <com.yutel.alog.prefs.AlogDialogPrefs
            android:dialogIcon="@drawable/icon"
            android:dialogMessage="@string/about_message"
            android:dialogTitle="@string/about_title"
            android:key="about"
            android:negativeButtonText="@null"
            android:src="@drawable/icon"
            android:summary="@string/about_summary"
            android:title="@string/about_title" />
    </PreferenceCategory>

</PreferenceScreen>